--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,10 @@
 {
 	"printWidth": 120,
-	"tabWidth": 3,
-	"useTabs": false,
+	"tabWidth": 4,
+	"useTabs": true,
 	"semi": true,
 	"singleQuote": false,
 	"trailingComma": "none",
 	"bracketSpacing": true,
 	"jsxBracketSameLine": false
-  }
+}
